--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,16 @@
 @media only screen and (max-width: 1108px) {
   .wrapper {
-  width: 90%;
+  width: 90%;  
   }
+
   #social  {
   position: absolute;
   top: 82px;
-  right: 4px;
+  right: 4%;
+  width: auto;
+  }
+
+  #social a {
+  display: inline-block;
   }
 }
