--- a/css/responsive.css
+++ b/css/responsive.css
@@ -68,3 +68,18 @@
     column-count: 1;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  #navbar nav a {
+    display: none;
+  }
+
+  #navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.5em;
+    padding: 10px;
+  }
+
+
+}
