automatically backed up by learn

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,7 +87,13 @@
   }
 
   #social {
-  top: 60px;
+    top: 60px;
+  }
+
 }
 
+@media only screen and (max-width: 495px) {
+  #logo h2 {
+    visibility: hidden;
+  }
 }
